k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rental-service-port1
spec:
  selector:
    app: rental
  ports:
    - protocol: TCP
      port: 80        # The internal service port
      targetPort: 8080 # The port your application is listening on
      nodePort: 30002  # First external port exposed
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: rental-service-port2
spec:
  selector:
    app: rental
  ports:
    - protocol: TCP
      port: 80        # The internal service port
      targetPort: 8080 # The port your application is listening on
      nodePort: 30003  # Second external port exposed
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: rental-service-port3
spec:
  selector:
    app: rental
  ports:
    - protocol: TCP
      port: 80        # The internal service port
      targetPort: 8080 # The port your application is listening on
      nodePort: 30004  # Third external port exposed
  type: NodePort
